Fixed failing test, updated gunicorn config

--- a/gunicorn.conf
+++ b/gunicorn.conf
@@ -1,7 +1,7 @@
 [program:gunicorn]
-command=gunicorn codesandbox:app
+command=python3 -m gunicorn.app.wsgiapp codesandbox:app -w 4
 directory=/path/to/project
-user=nobody
+user=<YOUR_USER_NAME>
 autostart=true
 autorestart=true
 redirect_stderr=true
