--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
+astroid==1.6.6
+Click==7.0
+cycler==0.10.0
 Flask==0.12.2
-xvfbwrapper==0.2.9
+gunicorn==19.7.0
+isort==4.3.21
+itsdangerous==1.1.0
+Jinja2==2.10.3
+kiwisolver==1.1.0
+lazy-object-proxy==1.4.3
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+mccabe==0.6.1
+numpy==1.17.3
+pandas==1.1.5
 pylint==1.8.1
+pyparsing==2.4.4
+python-dateutil==2.8.1
 python-dotenv==0.7.1
-gunicorn==19.7
+pytz==2021.1
+scipy==1.5.4
+six==1.13.0
+Werkzeug==0.16.0
+wrapt==1.11.2
+xvfbwrapper==0.2.9
